--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="./src/style/index/main.css">
     <link rel="stylesheet" href="/src/style/responsividade/responsividade.css">
+
 
     <title>ModaOra</title>
 </head>
@@ -43,6 +45,7 @@
     </header>
     <main>
         <section class="box-one">
+            <img src="./src/assets/image/topo.jpg" alt="">
         </section>
         <section class="box-two">
             <div class="box-text">
